[project]
name = "arhadthedev_github_readme"
version = "1.0.0"
authors = [
  {name = "Oleg Iarygin", email = "oleg@arhadthedev.net"},
]
description = "Update <https://github.com/arhadthedev> profile README stats"
license = "MIT"
classifiers = [
  # As in <https://pypi.org/classifiers/>
  "Private :: Do Not Upload",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  # asyncio.run() requires Python >= 3.7
  # gidgethub 5.4.0 requires Python >= 3.8
  # aiohttp 3.12.12 requires Python >= 3.9
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
]
dependencies = [
  "aiohttp ~= 3.12",
  "gidgethub ~= 5.4",
]

[build-system]
# According to <https://setuptools.pypa.io/en/latest/history.html>:
# pyproject.toml are supported in setuptools >= 61.0.0
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["collect_contribs", "regen_readme"]
