[project]
name = "arhadthedev_github_readme"
version = "1.0.0"
authors = [
  {name = "Oleg Iarygin", email = "oleg@arhadthedev.net"},
]
description = "Update <https://github.com/arhadthedev> profile README stats"
license = "MIT"
classifiers = [
  # As in <https://pypi.org/classifiers/>
  "Private :: Do Not Upload",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  # asyncio.run() requires Python >= 3.7
  # gidgethub 5.4.0 requires Python >= 3.8
  # aiohttp 3.12.12 requires Python >= 3.9
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
]
dependencies = [
  "aiohttp ~= 3.12",
  "gidgethub ~= 5.4",
]

[build-system]
# According to <https://setuptools.pypa.io/en/latest/history.html>:
# pyproject.toml is supported in setuptools >= 61.0.0
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
# PEP 8
line-length = 79

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "Q000", # We use single quotes for now
  "RUF001", # We use a text editor that shows NBSP as <0xa0>, not a plain space

  # TODO: fix, remove, and tick the bullet points in gh-106
  "ANN001",
  "ANN202",
  "LOG015",
  "RET503",
  "UP009",
  "UP030",
  "UP032",
]

[tool.setuptools]
py-modules = ["collect_contribs", "regen_readme"]
